[gd_scene load_steps=6 format=3 uid="uid://cg2b84qj1bc54"]

[ext_resource type="Script" path="res://game/minigames/book/book_case_book_shower.gd" id="1_nssak"]
[ext_resource type="Texture2D" uid="uid://ce6uaav1tfisn" path="res://assets/objects/bookcase.png" id="1_ygo5n"]
[ext_resource type="Theme" uid="uid://bg721ml30kggd" path="res://assets/themes/hint_label_theme.tres" id="3_bm04g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_npdci"]
size = Vector2(72, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dk71y"]
radius = 28.0
height = 130.0

[node name="BookCaseBookShower" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_nssak")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_ygo5n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 30)
shape = SubResource("RectangleShape2D_npdci")

[node name="Label" type="Label" parent="."]
z_index = 10
offset_left = -49.0
offset_top = -74.0
offset_right = 49.0
offset_bottom = -51.0
theme = ExtResource("3_bm04g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 10
offset_left = -69.0
offset_top = -62.0
offset_right = 69.0
offset_bottom = -38.9999
theme = ExtResource("3_bm04g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 50)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dk71y")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
